# slidelang

./: .gitignore  BUILD_NOTES.md  CLAUDE.md  README.md  SETUP_INSTRUCTIONS.md  SLIDELANG_TEST_PLAN.md
.github/workflows/: backend-ci.yml  e2e.yml
backend/: .env.example  pyproject.toml  railway.toml  test2
backend/app/: config.py  main.py
backend/app/ai/: client.py  generator.py  prompts.py
backend/app/compiler/: compile.py  primitives.py
backend/app/compiler/templates/: deck.html.j2
backend/app/routes/: compile.py  decks.py  generate.py  health.py
backend/app/schema/: deck.py  deck.schema.json  export_schema.py
backend/app/storage/: memory.py
backend/app/validation/: pipeline.py  rules.py
backend/tests/: conftest.py  test_compiler.py  test_prompts.py  test_rate_limiter.py  test_routes_compile.py  test_routes_decks.py  test_routes_generate.py  test_routes_health.py  test_schema.py  test_storage.py  test_validation.py
backend/tests/fixtures/: broken_deck.json  good_deck.json
docs/: DEMO_SCRIPT.md  IMPROVEMENTS.md  PRD.md  TDD.md
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/deck/[id]/: page.tsx
frontend/app/deck/[id]/present/: page.tsx
frontend/e2e/: smoke.spec.ts
frontend/lib/: api.ts
frontend/styles/: globals.css
